[package]
name = "exp-elgamal"
authors = ["M.A. Alghazwi"]
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
ark-ff = { version = "^0.4.0", default-features = false }
ark-ec = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-ed-on-bn254 = {version = "^0.4.0", default-features = false}